--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="og:title" content="Airi">
 <meta name="theme-color" content="#1DA1F2">
 <meta name="og:image" content="https://avatars.githubusercontent.com/u/79479798?s=200&v=4">
+<meta name="og:description" content="  Documentation for Airi API">
+
 </head>
 
 <script>
